# Contextual

./: .clang-format  .gitignore  build.py  conanfile.txt  contextual.cpp  meson.build
src/: main.cpp  meson.build  mylib.cpp  mylib.hpp
unit_tests/: meson.build  test_mylib.cpp
